# PerovSegNet

./: .gitignore  PerovSegNet.spec  README.md  build.bat  build.sh  pyproject.toml  run_app.py  runner.sh
Automated annotations/: annotator.py
Model/: model.py  segmenter.cpp
Model(K-Means)/: model.py
app/: config.py  main.py  req.txt
app/processing/: image_processor.py  model.py  security.py
app/tests/: test_processing.py
app/ui/: components.py
