[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PerovSegNet"
version = "0.1.0"
description = "Perovskite segmentation utilities and demo"
license = "MIT"
authors = [{ name = "GoshKolotyan" }]

dependencies = [
    "numpy",
    "streamlit",
    "opencv-python",
    "matplotlib",
    "scikit-learn",
    "uvicorn[standard]",
    "uvloop",
    "fastapi",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["app", "Img"]
